# inteli-px4-cicd-demo

./: .dockerignore  .gitignore  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  quality_gates.yaml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  promote.yml  release.yml
docker/: Dockerfile.sitl  Dockerfile.tools  entrypoint-tester.sh
docs/: testing-philosophy.md
docs/adrs/: ADR-002-openchoreo-simulado.md  ADR-003-gazebo-headless-no-ci.md  ADR-004-promocao-por-retag.md  ADR-005-thresholds-quality-gates.md  ADR-006-sonar-self-hosted.md  ADR-007-jmavsim-no-pr2-gazebo-postponed.md  ADR-008-aprovacao-manual-pre-quality-gates.md
docs/aulas/: aula07-walkthrough.md  aula08-walkthrough.md  aula09-walkthrough.md  aula10-walkthrough.md
libs/drone_modeling/: dynamics.py  geometry.py  mission.py
missions/: square_50m.yaml
openchoreo/: component.yaml  release.yaml
tests/sitl/: conftest.py  test_connection.py  test_mission_square.py  test_physical_invariants.py
tests/unit/: test_dynamics.py  test_extract_metrics.py  test_geometry.py  test_mission.py  test_quality_gates.py  test_run_mission.py
tools/: extract_metrics.py  promote_release.py  quality_gates.py  run_mission.py
