[project]
name = "inteli-px4-cicd-demo"
version = "0.1.0"
description = "Demo de pipeline CI/CD para firmware PX4 — Módulo 13 Inteli T13"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mavsdk.*", "pyulog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=libs --cov=tools --cov-report=xml --cov-report=term"
asyncio_mode = "auto"
markers = [
    "sitl: testes que requerem PX4 SITL rodando (slow)",
]

[tool.coverage.run]
source = ["libs", "tools"]
omit = ["tests/*"]
